<resources>
    <string name="app_name">ICT Training</string>
    <string name="title_activity_icthome">ICT Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ict_trainings">ICT-Trainings</string>
    <string name="nav_home">Home</string>
    <string name="nav_event">Events</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_course">Courses</string>
    <string name="nav_cdetail">Courses</string>
    <string name="nav_std_review">Course Review</string>
    <string name="nav_lat_course">Latest Courses</string>
    <string name="nav_req_course">Request Course</string>
    <string name="nav_contact_map">Contact and Map</string>
    <string name="nav_ict_group">ICT Group</string>
    <string name="nav_about">About</string>
    <string name="course_req">Request Course</string>
    <string name="ictlogo">ictlogo</string>
    <string name="title">Android Application Development</string>
    <string name="desc">Android is an open stack and includes operating system Android is an open stack and includes operating system Android is an open stack and includes operating systemAndroid is an open stack and includes operating systemAndroid is an open stack and includes operating systemAndroid is an open stack and includes operating systemAndroid is an open stack and includes operating systemAndroid is an open stack and includes operating systemAndroid is an open stack and includes operating system</string>
    <string name="course_detail_image">course_detail_Image</string>
    <string name="banner">banner</string>
    <string name="detail">course_detail</string>
    <string name="imageIcon">Image icon for image detail</string>
    <string name="get_data">Get Data</string>
    <string name="ict_tra">
        ICT Trainings is a group of ICT integrators (www.ict-integrators.com), and it is a preferred
        training partner by many organizations belonging to Telecom, Enterprise, Banking, Health Care
        and Education sectors.
    </string>
    <string name="ict_des">
        At ICT Trainings, we deliver both standard and customized/bespoke
        training courses for a wide range of technology vendors like CiscoÂ®, JuniperÂ®, MicrosoftÂ®,
        RedHatÂ®, AdobeÂ®, JavaÂ®, PHPÂ®, and much more! Our courses will suit beginners as well as
        advanced users to augment their technical capabilities to excel in career. Furthermore, our
        job section always keeps on posting local and international placements.
    </string>
    <string name="ict_beg">
        Our courses will suit beginners as well as advanced users to augment their technical
        capabilities to excel in career. Furthermore, our job section always keeps on posting local
        and international placements.
    </string>
    <string name="ict_online">Online Training is the latest method in training and development.
        We believe that live trainin is still essential, however online training offers a flexible
        and cost effective way to gain skills. Allowing you the FREEDOM
        to create the life you desire.</string>
    <string name="ictablogo">ictaboutuslogo</string>
    <string name="onltrain">Online Training</string>
    <string name="rate">Rate Us</string>
    <string name="title_activity_maps">Contact and Map</string>
    <string name="map_txt">Welcom to the google maps api first assignment</string>
    <string name="map">Hello maps!</string>
    <string name="ict_adr"><![CDATA[Address: 349-H/3, Johar Town, Lahore 54700, Pakistan.
    [Near Expo Center Towards Mughal Eye Hospital Opp. CITY School Ravi Campus]]]></string>
    <string name="ict_co">Contact Us</string>
    <string name="ict_tele"><![CDATA[Tel: +92–42–35951406, Cell: +92-321-3499131 
    Fax: +92-42-35951406]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_gallery">Image_Gallery</string>
    <string name="h_par1">At ICT Trainings, we deliver both standard and customized/bespoke training courses for a wide range of technology vendors like Cisco®, Juniper®, Microsoft®, RedHat®, Adobe®, Java®, PHP®, and much more!</string>
    <string name="h_par2">Our courses will suit beginners as well as advanced users to augment their technical capabilities to excel in career. Furthermore, our job section always keeps on posting local and international placements.</string>
    <string name="h_par3">ICT Trainings can run courses in customers premises, if required. Through our technologically advanced infrastructure, DISTANT LEARNING is among major focus of ICT Trainings. We deliver skills to locals from any part of the world via innovative methodologies that comprise of lectures and dedicated access to equipment/racks. Engineering Your Career.</string>
    <string name="loader">Loading....Courses</string>

</resources>