<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/aboutfragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context="ict_trainings.ictapp.ICThome">

    <RelativeLayout
        android:id="@+id/fragmentcourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewhome"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/viewhome"
            android:layout_marginTop="10dp"
            android:text="@string/h_par1"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textIsSelectable="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginTop="100dp"
            android:text="@string/h_par2"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginTop="180dp"
            android:text="@string/h_par3"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>
    </RelativeLayout>
</ScrollView>